Fix alignment of control rows in settings window

--- a/stylesheets/components/Preferences.scss
+++ b/stylesheets/components/Preferences.scss
@@ -188,6 +188,7 @@
   }
 
   &__control {
+    align-items: center;
     display: flex;
     justify-content: space-between;
     min-height: 48px;
